<resources>
    <string name="app_name">Wine Training</string>
    <string name="main_btn_high_scores">High Scores</string>
    <string name="main_btn_wine_list">Wine List</string>
    <string name="main_btn_question_list">Question List</string>
    <string name="main_btn_play">Play</string>

    <string name="HighScores_tv_high_scores">High Scores</string>
    <string name="HighScores_tv_survivor_mode">Survivor Mode</string>
    <string name="HighScores_tv_name">Name</string>
    <string name="HighScores_tv_score">Score</string>
    <string name="HighScores_tv_1st">1st</string>
    <string name="HighScores_tv_2nd">2nd</string>
    <string name="HighScores_tv_3rd">3rd</string>

    <string name="WineList_et_example_name">Example name</string>
    <string name="WineList_et_example_category">Example Category</string>
    <string name="WineList_et_glass">Glass</string>
    <string name="WineList_et_bottle">Bottle</string>
    <string name="WineList_et_price">Price:</string>
    <string name="WineList_et_category">Category:</string>
    <string name="WineList_tv_slash" translatable="false">/</string>
    <string name="WineList_tv_name">Name:</string>

    <string name="Play_tv_what_do_you_want_to_study">What do you want to study?</string>
    <string name="Play_btn_names">Names</string>
    <string name="Play_btn_categories">Categories</string>
    <string name="Play_btn_prices">Prices</string>
    <string name="Play_btn_all">All</string>
    <string name="Play_btn_all_menu">Survivor Mode</string>
    <string name="Play_tv_how_many_questions">How many questions?</string>
    <string name="Play_tv_question">Question</string>
    <string name="Play_tv_score">Score:</string>
    <string name="Play_tv_mode">Mode:</string>
    <string name="Play_tv_lives_left">Lives Left:</string>

    <string name="QuestionList_et_name_category_glass_or_bottle">name, category, glass or bottle</string>
    <string name="QuestionList_et_example_question">Example Question</string>
    <string name="QuestionList_tv_question">Question:</string>
    <string name="QuestionList_tv_type">Type:</string>

    <string name="DialogAreYouSure_tv_are_you_sure">Are you sure?</string>
    <string name="DialogAreYouSure_btn_cancel">Cancel</string>
    <string name="DialogAreYouSure_btn_yes">Yes</string>

    <string name="DialogGameOver_tv_your_score_is">Your Score is:</string>
    <string name="DialogGameOver_et_your_name_here">Your Name Here</string>
    <string name="DialogGameOver_btn_retry">Retry</string>
    <string name="DialogGameOver_btn_home">Home</string>

    <string name="ListItemQuestion_tv_type">Type:</string>
    <string name="ListItemQuestion_tv_question">Question:</string>
    <string name="ListItemWine_tv_name">Name:</string>
    <string name="ListItemWine_tv_category">Category:</string>
    <string name="ListItemWine_tv_price">Price:</string>
    <string name="ListItemWine_tv_slash" translatable="false">/</string>

    <string name="MainActivity_tv_closing_app">"Are you sure you want to close the app?"</string>

    <string name="PlayActivity_toast_you_need_to_write_your_name">You need to write your name to continue</string>
    <string name="PlayActivity_toast_you_are_all_right">You\'re all right</string>
    <string name="PlayActivity_toast_play_some_more">Play some more</string>
    <string name="PlayActivity_tv_ending_game">Are you sure you want to quit the current game?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ScoreTimeStamp">Date:</string>
    <string name="Names">Names</string>
    <string name="Categories">Categories</string>
    <string name="Prices">Prices</string>
    <string name="All">All</string>
    <string name="Error">ERROR</string>
    <string name="Drinks">Drinks</string>
    <string name="Recipes">Recipes</string>
    <string name="MenuItems">Menu Items</string>
    <string name="RecipeImage">Recipe Image</string>


    <string name="dialog_title_success">Success</string>
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_info">Info</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_title_are_you_sure_delete">Are you sure you want to delete this? This cannot be un-done.</string>
    <string name="dialog_button_negative">Cancel</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="ingredients">Ingredients:</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="or_create_a_new_item">Or create a new item:</string>
    <string name="select_from_your_ingredient_list">Select from your ingredient list:</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_type">Recipe type:</string>
    <string name="ingredients2">ingredients</string>
    <string name="error">Error</string>
    <string name="delete_ingredient">delete ingredient</string>
    <string name="select_from_your_recipe_list">Select from your recipe list:</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="add_recipe">add recipe</string>
    <string name="recipes">Recipes:</string>
    <string name="meal_item_type">Meal Item Type:</string>
    <string name="meal_item_name">Meal item name</string>
    <string name="instructions">Instructions:</string>
    <string name="menu_item_name">Menu item name</string>
    <string name="menu_item_type">Menu item type</string>
    <string name="menus">Menus</string>
    <string name="menu_name">Menu name</string>
    <string name="menu_type">Menu type</string>
    <string name="menu_items">Menu items:</string>
    <string name="add_menu_items">Add menu items</string>
    <string name="select_from_your_menu_item_list">Select from your menu item list</string>
    <string name="add_menu_item">Add menu item</string>
    <string name="menu_item_image">Menu item image</string>
    <string name="take_photo">Take Photo</string>
    <string name="used_in">Used In</string>
    <string name="recipe_s">recipe(s)</string>
    <string name="price">Price</string>
    <string name="select_menu_items">Select menu items</string>
    <string name="delete_menu_item">Delete Menu Item</string>
    <string name="select_recipes">Select Recipes</string>
    <string name="select_ingredients">Select Ingredients</string>
    <string name="close">Close</string>
    <string name="ingredient_calories_needed">Some ingredients need their calories assigned</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="apply">Apply</string>

    <string-array name="units">
        <item>Unit</item>
        <item>Dash</item>
        <item>Pinch</item>
        <item>Tea Spoon</item>
        <item>Table Spoon</item>
        <item>Ounce</item>
        <item>Pound</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Liter</item>
        <item>Milliliter</item>
        <item>Quart</item>
        <item>Gallon</item>
    </string-array>

    <string name="dialog_title_new_employee">"New Employee"</string>
    <string name="table_menu">New Table type</string>
    <string name="clorse">Close</string>
    <string name="section_color_menu">Section Color Menu</string>
    <string name="summon">summon</string>


</resources>