<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:cardCornerRadius="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:padding="8dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_check_circle_black_24dp"
                app:backgroundTint="@color/black"
                app:borderWidth="1dp"
                app:fabSize="mini" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_cancel_black_24dp"
                app:backgroundTint="@color/black"
                app:borderWidth="1dp"
                app:fabSize="mini" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_player_name_text_item_score"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/tv_player_name_text_item_score"
                android:hint="@string/WineList_et_example_name"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete" />

            <EditText
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_category_text_item_score"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/tv_category_text_item_score"
                android:hint="@string/WineList_et_example_category"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete" />

            <EditText
                android:id="@+id/glassPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/priceText"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/priceText"
                android:hint="@string/WineList_et_glass"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/bottlePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/priceText"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/dividerText"
                android:hint="@string/WineList_et_bottle"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/tv_category_text_item_score"
                android:text="@string/WineList_et_price"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_category_text_item_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/tv_player_name_text_item_score"
                android:text="@string/WineList_et_category"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/dividerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/priceText"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/glassPrice"
                android:text="@string/WineList_tv_slash" />

            <TextView
                android:id="@+id/tv_player_name_text_item_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/WineList_tv_name"
                android:textColor="@android:color/black" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/list_item_wine" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:backgroundTint="@color/white"
        app:backgroundTint="@color/black"
        app:borderWidth="1dp"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_button_prePopulateWines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/white"
        app:fabSize="mini"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>