<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_item_wine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="25dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_button_navigation"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_player_name_text_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ListItemWine_tv_name"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_player_name_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_player_name_text_item_score"
            android:layout_alignBaseline="@id/tv_player_name_text_item_score"/>

        <TextView
            android:id="@+id/tv_category_text_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_player_name_item_score"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/tv_player_name_text_item_score"
            android:layout_marginStart="8dp"
            android:text="@string/ListItemWine_tv_category"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_category_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_category_text_item_score"
            android:layout_alignBaseline="@id/tv_category_text_item_score"/>

        <TextView
            android:id="@+id/priceText"
            android:text="@string/ListItemWine_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_category_item_score"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/tv_category_text_item_score"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_score_item_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/priceText"
            android:layout_alignBaseline="@id/priceText" />


        <TextView
            android:id="@+id/dividerText"
            android:text="@string/ListItemWine_tv_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_score_item_score"
            android:layout_alignBaseline="@id/priceText" />

        <TextView
            android:id="@+id/tv_bottlePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/dividerText"
            android:layout_marginStart="8dp"
            android:layout_alignBaseline="@id/priceText" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>