<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ingredient_img_ingredient_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ingredient_image"
        android:minWidth="300dp"
        android:minHeight="300dp"
        android:src="@drawable/ic_error_outline_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_ingredient_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ingredient_img_ingredient_detail"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_img_ingredient_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ingredient_name_ingredient_detail"
            style="@style/Text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2_ingredient_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="Calories"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ingredient_img_ingredient_detail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_ingredient_detail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ingredient_calories_ingredient_detail"
            style="@style/Text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_ingredient_ingredient_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_ingredient_detail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_ingredient_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_ingredient_ingredient_detail"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>